Pivot can have two key commands/angles